<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sign_out_menu"
        android:tooltipText="Sign out, and sign in as another user."
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/fresh_config_menu"
        android:tooltipText="Update the applicacation configuration settings."
        android:title="@string/fresh_config"
        app:showAsAction="never"/>
    <item
        android:id="@+id/invite_menu"
        android:tooltipText="Invite others to join Instant Witness."
        android:title="@string/invite_menu_label"/>
    <item
        android:id="@+id/setpincode_menu"
        android:tooltipText="This will stop the audio, with the right pincode."
        android:title="@string/setpincode_menu_label"/>
    <item
        android:id="@+id/camara_front"
        android:tooltipText="Change the camera view, to the front of your phone."
        android:title="@string/camera_front"/>
    <item
        android:id="@+id/camara_back"
        android:tooltipText="Change the camera view, to the back of your phone."
        android:title="@string/camera_back"/>
    <item
        android:id="@+id/camara_flashon"
        android:tooltipText="Turn the camera torch/light ON, of your phone."
        android:title="@string/camera_flashon"/>
    <item
        android:id="@+id/camara_flashoff"
        android:tooltipText="Turn the camera torch/light OFF, of your phone."
        android:title="@string/camera_flashoff"/>
    <item
        android:id="@+id/about"
        android:tooltipText="Written by Steven Stansbury, at Buryware. Copyright 2018."
        android:title="@string/about"/>

</menu>
